@@ -402,6 +402,7 @@ BEGIN
     LTEXT           "Or",IDC_STATIC,10,144,86,8
     CONTROL         "Use hexadecimal digits only (0-9,a-f)",IDC_USEHEXDIGITS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,160,204,10
+    PUSHBUTTON      "Generate",IDC_RANDOM,94,184,50,14
 END
 
 IDD_PS_PASSWORDHISTORY DIALOGEX 0, 0, 240, 124
