@@ -182,6 +182,8 @@ BEGIN
         MENUITEM "", 0, MFT_SEPARATOR
         MENUITEM "&Options...",                 ID_MENUITEM_OPTIONS, MFT_STRING
         MENUITEM "Customize &Main Toolbar",     ID_MENUITEM_CUSTOMIZETOOLBAR, MFT_STRING
+        MENUITEM "", 0, MFT_SEPARATOR
+        MENUITEM "Generate &Password",          ID_MENUITEM_GENERATEPASSWORD, MFT_STRING
     END
     POPUP "&Help", ID_HELPMENU, MFT_STRING
     BEGIN
@@ -388,6 +390,7 @@ BEGIN
     ID_MENUITEM_MANAGEFILTERS    "\nManage Filters"
     ID_MENUITEM_PASSWORDSUBSET   "\nDisplay subset of Password"
     ID_MENUITEM_SHOWHIDE_UNSAVED "\nShow Unsaved Changes"
+    ID_MENUITEM_GENERATEPASSWORD "\nGenerate Password"
 END
 
 STRINGTABLE
@@ -409,6 +412,7 @@ IDR_ACCS ACCELERATORS
 BEGIN
     "A",            ID_MENUITEM_ADD,        VIRTKEY, CONTROL
     "A",            ID_TOOLBUTTON_FINDADVANCED, VIRTKEY, CONTROL, ALT
+    "B",            ID_MENUITEM_PASSWORDSUBSET, VIRTKEY, CONTROL
     "C",            ID_MENUITEM_COPYPASSWORD, VIRTKEY, CONTROL
     "C",            ID_TOOLBUTTON_CLEARFIND, VIRTKEY, CONTROL, ALT
     "D",            ID_MENUITEM_DUPLICATEENTRY, VIRTKEY, CONTROL
@@ -422,6 +426,7 @@ BEGIN
     "M",            ID_MENUITEM_OPTIONS,    VIRTKEY, CONTROL
     "N",            ID_MENUITEM_NEW,        VIRTKEY, CONTROL
     "O",            ID_MENUITEM_OPEN,       VIRTKEY, CONTROL
+    "P",            ID_MENUITEM_GENERATEPASSWORD, VIRTKEY, CONTROL
     "Q",            ID_MENUITEM_EXIT,       VIRTKEY, CONTROL
     "R",            ID_MENUITEM_RUNCOMMAND,  VIRTKEY, CONTROL
     "R",            ID_MENUITEM_COPYRUNCOMMAND, VIRTKEY, CONTROL, ALT
@@ -429,7 +434,6 @@ BEGIN
     "S",            ID_TOOLBUTTON_FINDCASE, VIRTKEY, CONTROL, ALT
     "T",            ID_MENUITEM_AUTOTYPE,   VIRTKEY, CONTROL
     "U",            ID_MENUITEM_COPYUSERNAME, VIRTKEY, CONTROL
-    "B",            ID_MENUITEM_PASSWORDSUBSET, VIRTKEY, CONTROL
     VK_DELETE,      ID_MENUITEM_DELETE,     VIRTKEY
     VK_DELETE,      ID_MENUITEM_CLEARCLIPBOARD, VIRTKEY, CONTROL
     VK_RETURN,      ID_MENUITEM_EDIT,       VIRTKEY, CONTROL
